# reasoning-blind-spots

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  grade_only.py  grader validation.py  grader_validation.py  main.py  pyproject.toml
.github/: CODEOWNERS
conf/: config.yaml  config_val.yaml  cscs.yaml  cscs_tools.yaml  image_gen.yaml  image_gen_test.yaml  local_vllm.yaml  multi_to_text.yaml  openai_gpt5mini.yaml  rcp.yaml  regrade.yaml  text_only.yaml  text_only_tools.yaml  validation_image_out.yaml  validation_text_out.yaml
data/: Full_Benchmark.xlsx  artificial_analysis_intelligence_index.csv  author_map.json  chengkun_questions.jsonl  dummy_dataset.jsonl  israa_questions.jsonl  models_info.csv  models_pricing.csv  ms_test.jsonl  multicategory_scores.csv  processed_results.csv  processed_results_all.csv  processed_results_tools.csv  rafaila_questions.jsonl  reasoning_course.xlsx  task_score_results.csv  zhipeng_questions.jsonl
notebooks/: analysis.ipynb  category_analysis.py  cost_tracking.ipynb  create_dataset.ipynb  create_regrading_dataset.ipynb  grader_validation.ipynb  image_grader_validation.ipynb  multicategory.py  multicategory_update.py  push_dataset.ipynb  results_processing.ipynb  results_table.ipynb  validation_results.ipynb
scripts/: eval_image_gen.sh  eval_multi_to_text.sh  eval_text_only.sh  eval_text_only_with_tools.sh  validate_pipeline.sh
validation_questions/: all.jsonl  imagegen_validation_set.jsonl  validation_set_1.jsonl  validation_set_2.jsonl  validation_set_3.jsonl  (+3 more)
(+305 files in other folders)
